--- a/script-to-snmp.cabal
+++ b/script-to-snmp.cabal
@@ -29,6 +29,7 @@ executable script-to-snmp
                , process == 1.2.3.0
                , time
                , containers
+               , binary
   hs-source-dirs:      src
   ghc-options: -Wall -O2 -threaded
   default-language:    Haskell2010
